Finalizing HTML updating styling

--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
 <body>
   <main>
     <div class="card-wrapper">
-      <h2>Jessica Randall</h2>
+      <div class="profile-pic-image-wrapper">
+        <img 
+          src="./assets/images/avatar-jessica.jpeg" 
+          alt="headshot">
+      </div>
+      <div class="name-location-wrapper">
+        <h2>Jessica Randall</h2>
+      <span>London, United Kingdom</span>
+      </div>
+      <div class="bio-wrapper">
+        <p>Front-end developer and avid reader</p>
+      </div>
+      <div class="links-wrapper">
+        <button type="button" class="primary-button">Github</button>
+        <button type="button" class="primary-button">Frontend Mentor</button>
+        <button type="button" class="primary-button">LinkedIn</button>
+        <button type="button" class="primary-button">Twitter</button>
+        <button type="button" class="primary-button">Instagram</button>
+      </div>
     </div>
-
   </main>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
 </body>
 </html>
