--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="card-wrapper">
       <div class="profile-pic-image-wrapper">
         <img 
+          class="headshot"
           src="./assets/images/avatar-jessica.jpeg" 
           alt="headshot">
       </div>
