Add tabindex to html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <p>Front-end developer and avid reader</p>
       </div>
       <div class="links-wrapper">
-        <button type="button" class="primary-button">Github</button>
-        <button type="button" class="primary-button">Frontend Mentor</button>
-        <button type="button" class="primary-button">LinkedIn</button>
-        <button type="button" class="primary-button">Twitter</button>
-        <button type="button" class="primary-button">Instagram</button>
+        <button type="button" class="primary-button" tabindex="1">Github</button>
+        <button type="button" class="primary-button" tabindex="2">Frontend Mentor</button>
+        <button type="button" class="primary-button" tabindex="3">LinkedIn</button>
+        <button type="button" class="primary-button" tabindex="4">Twitter</button>
+        <button type="button" class="primary-button" tabindex="5">Instagram</button>
       </div>
     </div>
   </main>
